[package]
name = "lair"
version = "0.6.0"
description = "Linear algebra in Rust"
readme = "README.md"
documentation = "https://docs.rs/lair"
homepage = "https://github.com/vinesystems/lair"
repository = "https://github.com/vinesystems/lair"
license = "Apache-2.0"
keywords = ["linear-algebra", "matrix", "decomposition"]
categories = ["mathematics"]
authors = ["Min Kim <msk@dolbo.net>", "Min Shao <min.shao1988@gmail.com>"]
edition = "2018"
exclude = ["./github"]

[features]
default = []
serialization = [ "serde", "num-complex/serde" ]

[dependencies]
ndarray = "0.15"
num-complex = "0.4"
num-traits = "0.2.15"
serde = { version = "1", optional = true }
thiserror = "1"

[dev-dependencies]
approx = "0.5" # Update only when ndarray updates its dependency
criterion = "0.3"
ndarray = { version = "0.15.4", features = ["approx-0_5"] }
ndarray-rand = "0.14"
rand_isaac = "0.3"

[[bench]]
name = "geqrf"
harness = false

[[bench]]
name = "getrf"
harness = false

[[bench]]
name = "getrs"
harness = false

[packages.metadata.docs.rs]
all-features = true
