[package]
name = "lair"
version = "0.8.0"
description = "Linear algebra in Rust"
readme = "README.md"
documentation = "https://docs.rs/lair"
homepage = "https://github.com/vinesystems/lair"
repository = "https://github.com/vinesystems/lair"
license = "Apache-2.0"
keywords = ["linear-algebra", "matrix", "decomposition"]
categories = ["mathematics"]
edition = "2021"
rust-version = "1.68"

[features]
default = []
serde = ["dep:serde", "num-complex/serde"]
serialization = ["serde"]  # Deprecated: use "serde" instead

[dependencies]
ndarray = "0.17"
num-complex = "0.4"
num-traits = "0.2.15"
serde = { version = "1", optional = true }
thiserror = "2"

[dev-dependencies]
approx = "0.5"                                        # Update only when ndarray updates its dependency
criterion = "0.8"
ndarray = { version = "0.17", features = ["approx"] }
ndarray-rand = "0.16"
rand_isaac = "0.4"

[[bench]]
name = "geqrf"
harness = false

[[bench]]
name = "getrf"
harness = false

[[bench]]
name = "getrs"
harness = false

[lints.clippy]
pedantic = "warn"

[package.metadata.docs.rs]
all-features = true
